ejecucion de test en el servicio